--- a/desafios/d010/estilo/style.css
+++ b/desafios/d010/estilo/style.css
@@ -29,25 +29,61 @@ body {
     font-family: var(--fonte-padrao);
     /*min-width: 550px;
     max-width: 850px;*/
+    /*min-width: 280px;
+            max-width: 800px;
+            margin: auto;*/
     }
 header {
-    background-color: var(--cor4);
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor4)) ;
+    height: 150px;
+    text-align: center;
+    padding-top: 30px;
 }    
 header > h1 {
     color: white;
     font-family: var(--fonte-destaque);
+    font-size: 3em;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.276);
 }
 header > p {
+    font-family: var(--fonte-padrao);
     color: white;
+    font-size: 1.2em;
+    max-width: 600px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: auto;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.319);
 }
 nav {
-    background-color: var(--cor5);    
+    background-color: var(--cor5);   
+    padding: 10PX;
+    box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.364);
 }
 nav > a {
     color: white;
+    margin: 10px;
+    padding: 2px;
+    text-decoration: none;
+}
+nav > a:hover {
+    background-color: var(--cor3);
+    color: var(--cor5);
+    border-radius: 5px;
+    transition-duration: .5s;
 }
 main {
     background-color: white;
+
+        min-width: 300px;
+        max-width: 1000px;
+        padding: 20px;
+        margin: auto;
+        margin-bottom: 30px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418) ;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
 }
 main > article > h1 {
     color: var(--cor5);
@@ -56,9 +92,23 @@ main > article > h1 {
 main > article > h2 {
     font-family: var(--fonte-android);
 }
+main > article > picture > img {
+    width: 100%;
+}
+main > article > img.pequena {
+    width: 50%;
+    display: block;
+    margin: auto;
+}
+main > article > iframe.video {
+    width: 75%;
+    display: block;
+    margin: auto;
+}
 footer {
     background-color: var(--cor5);
     color: white;
+    padding: 20px;
 }
 footer > a {
     color: var(--cor0);
