--- a/desafios/d010/estilo/style.css
+++ b/desafios/d010/estilo/style.css
@@ -8,7 +8,7 @@
         font-weight: normal;
     }
     
-:root {
+:root { /*Cores como sendo variáveis (-- e coloca o nome da variável à frente)*/
     --cor0: #c5ebd6;
     --cor1: #83e1ad;
     --cor2: #3ddc84;
@@ -33,6 +33,32 @@ body {
             max-width: 800px;
             margin: auto;*/
     }
+    a.externo::after {
+        content: '\00A0\1F517';
+    }
+    main p {
+        margin: 15px 0px;
+        text-align: justify;
+        text-indent: 30px;
+        line-height: 2em;
+    }
+    main strong {
+        color: var(--cor4);
+        font-weight: bold;
+        
+    }
+    main a {
+        text-decoration: none;
+        color: var(--cor4);
+        font-weight: bold;
+        background-color: var(--cor0);
+        padding: 2px 6px;
+        border-radius: 3px;
+    }
+    main a:hover {
+        text-decoration: underline;
+        color: var(--cor5);
+    }
 header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor4)) ;
     height: 150px;
@@ -43,13 +69,14 @@ header > h1 {
     color: white;
     font-family: var(--fonte-destaque);
     font-size: 3em;
+    font-weight: normal;
     margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.276);
 }
 header > p {
     font-family: var(--fonte-padrao);
     color: white;
-    font-size: 1.2em;
+    font-size: 1.2em;    
     max-width: 600px;
     padding-left: 10px;
     padding-right: 10px;
@@ -88,28 +115,75 @@ main {
 main > article > h1 {
     color: var(--cor5);
     font-family: var(--fonte-android);
+    font-weight: normal;
+    font-size: 1.8em;
 }
 main > article > h2 {
     font-family: var(--fonte-android);
+    font-weight: normal;
+    color: var(--cor4);
+    font-size: 1.3em;
+    background-image: linear-gradient(to right, var(--cor1), transparent); /*background-color com transparência*/
+    text-indent: 8px; /*Tipo recuo para parágrafo*/
+}
+main > article > h3 {
+    font-family: var(--fonte-android);
+    font-size: 1.2em;
 }
 main > article > picture > img {
     width: 100%;
 }
 main > article > img.pequena {
-    width: 50%;
+    max-width: 350px;
     display: block;
     margin: auto;
 }
-main > article > iframe.video {
-    width: 75%;
-    display: block;
-    margin: auto;
+div.video {
+   background-color: var(--cor5); 
+   margin: 0px -20px 30px -20px;   
+   padding: 10px;
+   padding-bottom: 59%;
+   position: relative;
 }
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+
+}
+aside {
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.361);
+}
+aside > h3 {
+    background-color: var(--cor4);
+    color: white;
+    padding: 5px;
+    margin: -15px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+}
+aside > ul {
+    list-style-type: '\2714\00A0\00A0'; /*emojipidea - 00A0 è para dar espaço*/
+    list-style-position: inside;
+    columns: 2;
+}
+
 footer {
     background-color: var(--cor5);
     color: white;
+    font-size: 0.8em;
     padding: 20px;
+    text-align: center;
 }
 footer > a {
-    color: var(--cor0);
+    color: var(--cor1);
+    text-decoration: none;
+}
+footer > a:hover {
+    color: var(--cor2);
+    text-decoration: underline;
 }
