--- a/desafios/d12/estilo/style.css
+++ b/desafios/d12/estilo/style.css
@@ -1,12 +1,20 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
 
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 * {
     margin: 0px;
     padding: 0px;
 }
 html, body {
-    min-height: 100vh;
-    background-color: darkgray;
+    min-height: 100vh;    
+    font-family: var(--fonte1);
+    
 }
 header {
     background-color: black;
@@ -19,11 +27,35 @@ header {
 header > p {
     padding-bottom: 50px;
 }
-a {
+
+header a, footer a {
     color: white;
     text-decoration: none;
     font-weight: bolder;
 }
-a:hover {
+header a:hover, footer a:hover {
     text-decoration: underline;
+}
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+section.normal{
+    background-color: white;
+}
+section.imagem {
+    background-color: rgb(51, 51, 51);
+    color: white;
+}
+section.imagem > p {
+    background-color: rgba(0, 0, 0, 0.254);
+    width: 400px;
+}
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
